--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                     <h2 class="work-heading">
                         Featured Work
                     </h2>
+                    <p class="featured-info">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia incidunt necessitatibus sunt blanditiis modi, eius maiores non ut consequuntur distinctio beatae, consequatur sed!
+                    </p>
                     <div class="card-view">
                         <div class="card">
                             <div class="card-img-container">
